--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
-               android:text="REGISTRO"
+               android:text="REGISTRO!!!"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center_horizontal"
@@ -53,7 +53,7 @@
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Vincent"
-                       android:textSize="20dp"
+                       android:textSize="23dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white"
                        />
@@ -63,7 +63,7 @@
                        android:text="Soria"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white"
-                       android:textSize="20dp"
+                       android:textSize="23dp"
                        />
                </LinearLayout>
 
